--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 authors = ["zggff<gigamaximwachau@gmail.com>"]
 license = "MIT OR Apache-2.0"
-
+repository = "https://github.com/zggff/deezer_downloader"
+homepage = "https://github.com/zggff/deezer_downloader"
+readme = "README.md"
+keywords = ["deezer", "downloader"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
