--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 authors = ["zggff<gigamaximwachau@gmail.com>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/zggff/deezer_downloader"
-homepage = "https://github.com/zggff/deezer_downloader"
+rpage = "https://github.com/zggff/deezer_downloader"
 readme = "README.md"
 keywords = ["deezer", "downloader"]
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "crate to download music from deezer"
 
 [dependencies]
 reqwest = {version = "0.11.7", features = ["json", "cookies"]}
