--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ blowfish = "0.8.0"
 id3 = "0.6.6"
 tokio = { version = "1.23.0", features = ["full"] }
 anyhow = "1.0.68"
+log = "0.4.17"
+env_logger = "0.10.0"
