--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ log = "0.4.17"
 env_logger = "0.10.0"
 clap = { version = "4.0.30", features = ["derive"] }
 futures = "0.3.25"
+indicatif = "0.17.7"
